feat: add Control Center mail notifications
